  . Implemented ldap_modify_batch (https://wiki.php.net/rfc/ldap_modify_batch).
  (Ondřej Hošek)

- Openssl:
  . Fixed bug #66501 (Add EC key support to php_openssl_is_private_key).
  (Mark Zedwood)

- PCRE:
  . Upgraded to PCRE 8.34. (Anatol)

- Pgsql:
  . Added warning for dangerous client encoding and remove possible injections
    for pg_insert()/pg_update()/pg_delete()/pg_select(). (Yasuo)


06 Feb 2014, PHP 5.5.9

- Core:
  . Fixed bug #66509 (copy() arginfo has changed starting from 5.4). (willfitch)

- GD:
  . Fixed bug #66356 (Heap Overflow Vulnerability in imagecrop()).
    (Laruence, Remi)

- OPCache:
  . Fixed bug #66474 (Optimizer bug in constant string to boolean conversion).
    (Dmitry)
  . Fixed bug #66461 (PHP crashes if opcache.interned_strings_buffer=0).
    (Dmitry)
  . Fixed bug #66298 (ext/opcache/Optimizer/zend_optimizer.c has dos-style 
    ^M as lineend). (Laruence)

- PDO_pgsql:
  . Fixed bug #62479 (PDO-psql cannot connect if password contains
spaces) (willfitch, iliaa)

- Readline
  . Fixed Bug #66412 (readline_clear_history() with libedit causes segfault after
    #65714). (Remi)

- Session
  . Fixed bug #66469 (Session module is sending multiple set-cookie headers when
    session.use_strict_mode=1) (Yasuo)
  . Fixed bug #66481 (Segfaults on session_name()).
    (cmcdermottroe at engineyard dot com, Yasuo)

- Standard
  . Fixed bug #66395 (basename function doesn't remove drive letter). (Anatol)

- Sockets:
  . Fixed bug #66381 (__ss_family was changed on AIX 5.3). (Felipe)

- Zend Engine
  . Fixed bug #66009 (Failed compilation of PHP extension with C++ std
    library using VS 2012). (Anatol)

09 Jan 2014, PHP 5.5.8

- Core:
  . Disallowed JMP into a finally block. (Laruence)
  . Added validation of class names in the autoload process. (Dmitry)
  . Fixed invalid C code in zend_strtod.c. (Lior Kaplan)
  . Fixed ZEND_MM_MEM_TYPE=mmap_zero. (Dmitry, Tony)
  . Fixed bug #66041 (list() fails to unpack yielded ArrayAccess object).